--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,9 @@ dependencies:
   line_icons: ^2.0.3
   carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.1.0
-
+  font_awesome_flutter: ^10.5.0
+  dio:
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
