--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,9 +64,13 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icons/profilepage/iconperson1.png
+    - assets/icons/profilepage/iconperson1big.png
+    - assets/icons/profilepage/iconnotif.png
+    - assets/icons/profilepage/iconhelp.png
+    - assets/icons/profilepage/arrows.png
+    - assets/saved_product/saved_product.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -79,17 +83,27 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+fonts:
+    - family: GoogleSans
+      fonts:
+        - asset: assets/fonts/google_sans/ProductSans-Regular.ttf
+        - asset: assets/fonts/google_sans/ProductSans-Black.ttf
+        - asset: assets/fonts/google_sans/ProductSans-Black.ttf
+          style: italic
+        - asset: assets/fonts/google_sans/ProductSans-Bold.ttf
+        - asset: assets/fonts/google_sans/ProductSans-Bold.ttf
+          style: italic
+        - asset: assets/fonts/google_sans/ProductSans-Italic.ttf
+          style: italic
+        - asset: assets/fonts/google_sans/ProductSans-Light.ttf
+        - asset: assets/fonts/google_sans/ProductSans-Light.ttf
+          style: italic
+        - asset: assets/fonts/google_sans/ProductSans-Medium.ttf
+        - asset: assets/fonts/google_sans/ProductSans-Medium.ttf
+          style: italic
+        - asset: assets/fonts/google_sans/ProductSans-Thin.ttf
+        - asset: assets/fonts/google_sans/ProductSans-Thin.ttf
+          style: italic
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
