--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   font_awesome_flutter: ^10.5.0
   dio:
+  sqflite: 
   
 dev_dependencies:
   flutter_test:
