--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   dio:
   sqflite: 
+  shared_preferences: ^2.2.0
+  flutter_zoom_drawer: ^3.1.1
+  flutter_rating_bar: ^4.0.1
   
 dev_dependencies:
   flutter_test:
